--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>this is main heading</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, sunt? Consequuntur ullam vero iste aspernatur incidunt quis harum voluptatibus beatae itaque. Praesentium nisi dicta quas atque veniam? Laboriosam, animi maxime!</p>
     <img src="./images/1-funny-aloha-hawaiian-cat-random-galaxy.jpg" alt="ok">
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum rem doloribus soluta ad obcaecati autem laboriosam ex quaerat, placeat dolore est, maiores deserunt repellat libero sint eum pariatur delectus quo.</p>
     <br><a href="https://www.facebook.com/">Click here to open</a>
 </body>
 </html>
